# MusicData

./: .env  .gitignore  README.md  downloader.py  main.py  pyproject.toml  requirements.txt  spotify_tracks_dataset.csv  stems.py  tracks.py  tracks_with_stems.csv  update_dataset_from_debug.py  youtuber_catcher.py
